# api/swagger/swagger.yaml
@@ -62,6 +62,8 @@ definitions:
         items:
           type: string
         type: array
+      title:
+        type: string
       updated_at:
         type: string
     type: object
@@ -111,6 +113,30 @@ info:
   version: "1.0"
 paths:
   /posts:
+    get:
+      description: Retrieve all posts for the authenticated user.
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/internal_api_handler.PostResponse'
+            type: array
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/internal_api_handler.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/internal_api_handler.ErrorResponse'
+      security:
+      - BearerAuth: []
+      summary: Get user posts
+      tags:
+      - posts
     post:
       consumes:
       - application/json
